--- a/experiment/nbc_sprout_analysis.ipynb
+++ b/experiment/nbc_sprout_analysis.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,34 +295,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Testing second attempt at deme hibernation"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Testing with added local optimization demes"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Testing Differential Evolution root deme"
    ]
   },
@@ -386,42 +358,42 @@
      "output_type": "stream",
      "text": [
       "Running separable_rastrigin(3)\n",
-      "Best fitness: 7.959667418927552\n",
+      "Best fitness: 16.91428887276919\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running attractive_sector(6)\n",
-      "Best fitness: 0.0002819992172504726\n",
+      "Best fitness: 5.607002599106181e-06\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running step_elipsoid(7)\n",
-      "Best fitness: 8.24696062411013\n",
+      "Best fitness: 0.026719969556040724\n",
       "Numer of demes: 3\n",
       "Evaluation budget: 11880\n",
       "-\n",
       "Running bent_cigar(12)\n",
-      "Best fitness: 2.381627534981817\n",
+      "Best fitness: 26.17955581098795\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running asymetric_rastrigin(15)\n",
-      "Best fitness: 12.934437471186243\n",
+      "Best fitness: 10.94454306615171\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running griewank_rosenbrock(19)\n",
-      "Best fitness: 6.046868198591767\n",
+      "Best fitness: 8.02664203956239\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running katsuura(23)\n",
-      "Best fitness: 3.7062478317622345\n",
+      "Best fitness: 8.703176263705018\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n",
       "Running lunacek_rastrigin(24)\n",
-      "Best fitness: 68.09394418701471\n",
+      "Best fitness: 18.36394202849054\n",
       "Numer of demes: 2\n",
       "Evaluation budget: 11870\n",
       "-\n"
@@ -430,7 +402,7 @@
    ],
    "source": [
     "for name, problem in testbed.items():\n",
-    "    hms_tree = setup_hms_with_de_for_bbob(FunctionProblem(problem[0], maximize=False), bounds_base*dimensionality)\n",
+    "    hms_tree = setup_hms_with_de_for_bbob(FunctionProblem(problem[0], maximize=False), np.array(bounds_base*dimensionality))\n",
     "    print(f\"Running {name}\")\n",
     "    while not hms_tree._gsc(hms_tree):\n",
     "        hms_tree.metaepoch_count += 1\n",
@@ -444,6 +416,240 @@
     "    print(f\"Evaluation budget: {np.sum([np.sum([len(pop) for pop in deme.history])*(f(level)) for level, deme in hms_tree.all_demes])}\")\n",
     "    print('-')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing second attempt at deme hibernation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "bounds_base = [(-5.0, 5.0)]\n",
+    "gsc = metaepoch_limit(240)\n",
+    "lvl_2_lsc = dont_stop()\n",
+    "lvl_1_generations = 1\n",
+    "lvl_2_generations = 8\n",
+    "pop_size = 40\n",
+    "dither = True\n",
+    "mutation_std = 1.0\n",
+    "sigma0 = 1.5\n",
+    "\n",
+    "dimensionality = 10\n",
+    "\n",
+    "sprout_cond = SproutMechanism(NBC_Generator(2.0, 0.4), [NBC_FarEnough(1.5, 2), DemeLimit(1)], [LevelLimit(6)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def setup_hibernating_hms_for_bbob(function_problem, bounds):\n",
+    "\n",
+    "    config = [\n",
+    "    EALevelConfig(\n",
+    "        ea_class=SEA, \n",
+    "        generations=lvl_1_generations, \n",
+    "        problem=function_problem, \n",
+    "        bounds=bounds, \n",
+    "        pop_size=pop_size,\n",
+    "        mutation_std=mutation_std,\n",
+    "        lsc=dont_stop()\n",
+    "        ),\n",
+    "    CMALevelConfig(\n",
+    "        generations=lvl_2_generations,\n",
+    "        problem=function_problem, \n",
+    "        bounds=bounds,\n",
+    "        sigma0=sigma0,\n",
+    "        lsc=lvl_2_lsc\n",
+    "        )\n",
+    "    ]\n",
+    "\n",
+    "    config = TreeConfig(config, gsc, sprout_cond, options={\"hibernation\": True})\n",
+    "    return DemeTree(config)\n",
+    "\n",
+    "def setup_hibernating_hms_with_de_for_bbob(function_problem, bounds):\n",
+    "\n",
+    "    config = [\n",
+    "    DELevelConfig(\n",
+    "        generations=lvl_1_generations, \n",
+    "        problem=function_problem, \n",
+    "        bounds=bounds, \n",
+    "        pop_size=pop_size,\n",
+    "        dither=dither,\n",
+    "        lsc=dont_stop()\n",
+    "        ),\n",
+    "    CMALevelConfig(\n",
+    "        generations=lvl_2_generations,\n",
+    "        problem=function_problem, \n",
+    "        bounds=bounds,\n",
+    "        sigma0=sigma0,\n",
+    "        lsc=lvl_2_lsc\n",
+    "        )\n",
+    "    ]\n",
+    "\n",
+    "    config = TreeConfig(config, gsc, sprout_cond, options={\"hibernation\": True})\n",
+    "    return DemeTree(config)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running separable_rastrigin(3)\n",
+      "Best fitness: 7.959667418927268\n",
+      "Numer of demes: 12\n",
+      "Evaluation budget: 8610\n",
+      "-\n",
+      "Running attractive_sector(6)\n",
+      "Best fitness: 6.394884621840902e-14\n",
+      "Numer of demes: 22\n",
+      "Evaluation budget: 20700\n",
+      "-\n",
+      "Running step_elipsoid(7)\n",
+      "Best fitness: 8.526512829121202e-14\n",
+      "Numer of demes: 23\n",
+      "Evaluation budget: 12180\n",
+      "-\n",
+      "Running bent_cigar(12)\n",
+      "Best fitness: 1.1368683772161603e-13\n",
+      "Numer of demes: 3\n",
+      "Evaluation budget: 4560\n",
+      "-\n",
+      "Running asymetric_rastrigin(15)\n",
+      "Best fitness: 5.969754342559781\n",
+      "Numer of demes: 13\n",
+      "Evaluation budget: 10160\n",
+      "-\n",
+      "Running griewank_rosenbrock(19)\n",
+      "Best fitness: 0.5407227562029249\n",
+      "Numer of demes: 2\n",
+      "Evaluation budget: 3360\n",
+      "-\n",
+      "Running katsuura(23)\n",
+      "Best fitness: 0.07792689747835446\n",
+      "Numer of demes: 20\n",
+      "Evaluation budget: 20890\n",
+      "-\n",
+      "Running lunacek_rastrigin(24)\n",
+      "Best fitness: 13.669186452781375\n",
+      "Numer of demes: 7\n",
+      "Evaluation budget: 6960\n",
+      "-\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, problem in testbed.items():\n",
+    "    hms_tree = setup_hibernating_hms_for_bbob(FunctionProblem(problem[0], maximize=False), np.array(bounds_base*dimensionality))\n",
+    "    print(f\"Running {name}\")\n",
+    "    while not hms_tree._gsc(hms_tree):\n",
+    "        hms_tree.metaepoch_count += 1\n",
+    "        hms_tree.run_metaepoch()\n",
+    "        if not hms_tree._gsc(hms_tree):\n",
+    "            hms_tree.run_sprout()\n",
+    "\n",
+    "    f = lambda x: lvl_1_generations if x == 1 else lvl_2_generations\n",
+    "    print(f\"Best fitness: {np.max(hms_tree.optima).fitness - problem[1]}\")\n",
+    "    print(f\"Numer of demes: {len(hms_tree.all_demes)}\")\n",
+    "    print(f\"Evaluation budget: {np.sum([np.sum([len(pop) for pop in deme.history])*(f(level)) for level, deme in hms_tree.all_demes])}\")\n",
+    "    print('-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running separable_rastrigin(3)\n",
+      "Best fitness: 4.9747952854664845\n",
+      "Numer of demes: 7\n",
+      "Evaluation budget: 5010\n",
+      "-\n",
+      "Running attractive_sector(6)\n",
+      "Best fitness: 7.105427357601002e-14\n",
+      "Numer of demes: 5\n",
+      "Evaluation budget: 4350\n",
+      "-\n",
+      "Running step_elipsoid(7)\n",
+      "Best fitness: 0.018398064173467787\n",
+      "Numer of demes: 14\n",
+      "Evaluation budget: 7320\n",
+      "-\n",
+      "Running bent_cigar(12)\n",
+      "Best fitness: 1.1368683772161603e-13\n",
+      "Numer of demes: 3\n",
+      "Evaluation budget: 3690\n",
+      "-\n",
+      "Running asymetric_rastrigin(15)\n",
+      "Best fitness: 9.949585533113918\n",
+      "Numer of demes: 7\n",
+      "Evaluation budget: 5010\n",
+      "-\n",
+      "Running griewank_rosenbrock(19)\n",
+      "Best fitness: 0.43284508033224256\n",
+      "Numer of demes: 2\n",
+      "Evaluation budget: 3360\n",
+      "-\n",
+      "Running katsuura(23)\n",
+      "Best fitness: 0.1318692786315161\n",
+      "Numer of demes: 8\n",
+      "Evaluation budget: 7950\n",
+      "-\n",
+      "Running lunacek_rastrigin(24)\n",
+      "Best fitness: 9.409623760716244\n",
+      "Numer of demes: 6\n",
+      "Evaluation budget: 4680\n",
+      "-\n"
+     ]
+    }
+   ],
+   "source": [
+    "for name, problem in testbed.items():\n",
+    "    hms_tree = setup_hibernating_hms_with_de_for_bbob(FunctionProblem(problem[0], maximize=False), np.array(bounds_base*dimensionality))\n",
+    "    print(f\"Running {name}\")\n",
+    "    while not hms_tree._gsc(hms_tree):\n",
+    "        hms_tree.metaepoch_count += 1\n",
+    "        hms_tree.run_metaepoch()\n",
+    "        if not hms_tree._gsc(hms_tree):\n",
+    "            hms_tree.run_sprout()\n",
+    "\n",
+    "    f = lambda x: lvl_1_generations if x == 1 else lvl_2_generations\n",
+    "    print(f\"Best fitness: {np.max(hms_tree.optima).fitness - problem[1]}\")\n",
+    "    print(f\"Numer of demes: {len(hms_tree.all_demes)}\")\n",
+    "    print(f\"Evaluation budget: {np.sum([np.sum([len(pop) for pop in deme.history])*(f(level)) for level, deme in hms_tree.all_demes])}\")\n",
+    "    print('-')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Testing with added local optimization demes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
