--- a/examples/gecco_evooss.ipynb
+++ b/examples/gecco_evooss.ipynb
@@ -35,7 +35,7 @@
     "\n",
     "bounds = np.array([[-10.0, 10.0]] * 2)\n",
     "\n",
-    "eval_cutoff = 1100\n",
+    "eval_cutoff = 1000\n",
     "problem = FunctionProblem(\n",
     "    fitness_function=fitness_function,\n",
     "    bounds=bounds,\n",
@@ -79,6 +79,33 @@
    "outputs": [],
    "source": [
     "hms_tree.tree_diagram(output_path=\"hms_tree_diagram\", format=\"eps\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(hms_tree.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.eps\", group_by=\"deme\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.eps\", group_by=\"level\")"
    ]
   }
  ],
