feat: add missing transformation to the definition of C-shaped function

--- a/examples/landscape_approximation.ipynb
+++ b/examples/landscape_approximation.ipynb
@@ -33,38 +33,53 @@
     "import numpy as np\n",
     "\n",
     "\n",
-    "def gaussian_benchmark(x, x0, S):\n",
+    "def gaussian_benchmark(x, x0, r):\n",
     "    \"\"\"\n",
     "    Calculate the Gaussian-based benchmark function.\n",
     "\n",
     "    Parameters:\n",
     "    x (numpy array): Input vector.\n",
     "    x0 (numpy array): Center vector.\n",
-    "    S (numpy array): Symmetric positive definite matrix.\n",
+    "    r (numpy array): Vector of parameters determining the spread along each axis.\n",
     "\n",
     "    Returns:\n",
     "    float: Value of the benchmark function.\n",
     "    \"\"\"\n",
+    "    # Create diagonal matrix S with S_{i,i} = 1/r_i\n",
+    "    S = np.diag(1.0 / r)\n",
     "    diff = x - x0\n",
     "    exponent = -np.dot(np.dot(diff.T, S), diff)\n",
     "    return 1 - np.exp(exponent)\n",
     "\n",
     "\n",
+    "def flat_transform(s):\n",
+    "    \"\"\"\n",
+    "    Apply flattening transformation to function value.\n",
+    "    \n",
+    "    Parameters:\n",
+    "    s (float): Function value to transform.\n",
+    "    \n",
+    "    Returns:\n",
+    "    float: Transformed value max(2s-1, 0).\n",
+    "    \"\"\"\n",
+    "    return max(2 * s - 1, 0)\n",
+    "\n",
+    "\n",
     "def c_shaped_plateau(x):\n",
     "    \"\"\"\n",
-    "    Calculate the C-shaped plateau function f_C(x).\n",
+    "    Calculate the C-shaped plateau function f_C(x) with flattening.\n",
     "\n",
     "    Parameters:\n",
     "    x (numpy array): Input vector.\n",
     "\n",
     "    Returns:\n",
-    "    float: Value of the C-shaped plateau function.\n",
+    "    float: Value of the C-shaped plateau function after flattening.\n",
     "    \"\"\"\n",
-    "    # Define the matrix S as given in the text\n",
-    "    cov_matrices = [\n",
-    "        np.array([[1.0, 0.0], [0.0, 2.0]]),\n",
-    "        np.array([[2.0, 0.0], [0.0, 1.0]]),\n",
-    "        np.array([[1.0, 0.0], [0.0, 2.0]]),\n",
+    "    # Define the r parameters for each Gaussian\n",
+    "    r_params = [\n",
+    "        np.array([1.0, 0.5]),\n",
+    "        np.array([0.5, 1.0]),\n",
+    "        np.array([1.0, 0.5]),\n",
     "    ]\n",
     "\n",
     "    # Define the center vectors\n",
@@ -75,11 +90,12 @@
     "    ]\n",
     "\n",
     "    # Compute the product of all g functions\n",
-    "    result = 1.0\n",
-    "    for x0, cov in zip(centers, cov_matrices):\n",
-    "        result *= gaussian_benchmark(x, x0, cov)\n",
+    "    f_C = 1.0\n",
+    "    for x0, r in zip(centers, r_params):\n",
+    "        f_C *= gaussian_benchmark(x, x0, r)\n",
     "\n",
-    "    return result"
+    "    # Apply the flattening transformation\n",
+    "    return flat_transform(f_C)"
    ]
   },
   {
@@ -177,7 +193,7 @@
     "    mwea=mwea,\n",
     ")\n",
     "la.fit()\n",
-    "la.plot(filepath=\"kriging.png\")"
+    "la.plot(filepath=\"kriging.eps\")"
    ]
   },
   {
