feat: add plot_plateau_contour

--- a/examples/landscape_approximation.ipynb
+++ b/examples/landscape_approximation.ipynb
@@ -197,6 +197,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "la.plot_plateau_contour(filepath=\"kriging_contour.eps\", threshold=0.3)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
