feat: add instruction how to run it on GoogleColab

--- a/examples/gecco_evooss.ipynb
+++ b/examples/gecco_evooss.ipynb
@@ -6,6 +6,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# To run this notebook on Google Colab, uncomment the following lines:\n",
+    "# !pip install --upgrade numpy\n",
+    "# !pip install --upgrade pandas\n",
+    "# !pip install --upgrade pyhms"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import numpy as np\n",
     "from pyhms import (\n",
     "    hms,\n",
@@ -68,7 +80,7 @@
     ")\n",
     "\n",
     "hms_tree.plot_population(\n",
-    "    show_grid=True, show_all_individuals=True, filepath=\"hms_tree.eps\", show_scale=False\n",
+    "    show_grid=True, show_all_individuals=True, filepath=\"hms_tree.png\", show_scale=False\n",
     ")"
    ]
   },
@@ -78,7 +90,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hms_tree.tree_diagram(output_path=\"hms_tree_diagram\", format=\"eps\")"
+    "hms_tree.tree_diagram(output_path=\"hms_tree_diagram\", format=\"png\")"
    ]
   },
   {
@@ -96,7 +108,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.eps\", group_by=\"deme\")"
+    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.png\", group_by=\"deme\")"
    ]
   },
   {
@@ -105,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.eps\", group_by=\"level\")"
+    "hms_tree.plot_fitness_value_by_distance(filepath=\"distance_correlation.png\", group_by=\"level\")"
    ]
   }
  ],
