feat: improve landscape approximation notebook

--- a/examples/landscape_approximation.ipynb
+++ b/examples/landscape_approximation.ipynb
@@ -58,11 +58,8 @@
     "    \n",
     "    Parameters:\n",
     "    s (float): Function value to transform.\n",
-    "    \n",
-    "    Returns:\n",
-    "    float: Transformed value max(2s-1, 0).\n",
     "    \"\"\"\n",
-    "    return max(2 * s - 1, 0)\n",
+    "    return max(10 * s - 8, 0)\n",
     "\n",
     "\n",
     "def c_shaped_plateau(x):\n",
@@ -123,7 +120,7 @@
     "    TreeConfig,\n",
     "    DemeTree,\n",
     ")\n",
-    "from pyhms.sprout import get_NBC_sprout\n",
+    "from pyhms.sprout import get_simple_sprout\n",
     "from pyhms.demes.single_pop_eas.sea import SEA\n",
     "\n",
     "N = 2\n",
@@ -150,14 +147,23 @@
     "    ),\n",
     "]\n",
     "\n",
-    "global_stop_condition = SingularProblemEvalLimitReached(10000)\n",
+    "global_stop_condition = SingularProblemEvalLimitReached(1000)\n",
     "\n",
-    "sprout_condition = get_NBC_sprout()\n",
+    "sprout_condition = get_simple_sprout(far_enough=2.0)\n",
     "config = TreeConfig(\n",
     "    tree_config, global_stop_condition, sprout_condition, options={\"random_seed\": 1}\n",
     ")\n",
     "hms_tree = DemeTree(config)\n",
     "hms_tree.run()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hms_tree.tree_diagram()"
    ]
   },
   {
@@ -182,14 +188,14 @@
     "\n",
     "problem = FunctionProblem(c_shaped_plateau, maximize=False, bounds=bounds)\n",
     "\n",
-    "mwea = MWEA.create(problem=problem, mutation_std=0.2, p_mutation=0.35)\n",
+    "mwea = MWEA.create(problem=problem, mutation_std=0.5, p_mutation=0.5)\n",
     "\n",
     "la = LandscapeApproximator(\n",
     "    hms_tree=hms_tree,\n",
     "    merge_condition=HillValleyMergeCondition(\n",
     "        FunctionProblem(c_shaped_plateau, maximize=False, bounds=bounds), k=10\n",
     "    ),\n",
-    "    local_basin_epochs=10,\n",
+    "    local_basin_epochs=15,\n",
     "    mwea=mwea,\n",
     ")\n",
     "la.fit()\n",
@@ -202,7 +208,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "la.plot_plateau_contour(filepath=\"kriging_contour.eps\", threshold=0.3)"
+    "la.plot_plateau_contour(\n",
+    "    filepath=\"kriging_contour_with_gt.eps\",\n",
+    "    show_true_plateau=True,\n",
+    "    number_of_points_per_dim=250,\n",
+    "    threshold=0.0,\n",
+    ")"
    ]
   },
   {
