feat: explain how to install pyHMS in Google Colab

--- a/examples/gecco_evooss.ipynb
+++ b/examples/gecco_evooss.ipynb
@@ -7,9 +7,7 @@
    "outputs": [],
    "source": [
     "# To run this notebook on Google Colab, uncomment the following lines:\n",
-    "# !pip install --upgrade numpy\n",
-    "# !pip install --upgrade pandas\n",
-    "# !pip install --upgrade pyhms"
+    "# !pip install pyhms --upgrade --force-reinstall"
    ]
   },
   {
