--- a/examples/landscape_approximation.ipynb
+++ b/examples/landscape_approximation.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# To run this notebook on Google Colab, uncomment the following lines:\n",
+    "# !pip install pyhms --upgrade --force-reinstall"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
